feat: update repo reference

--- a/src/ApacheTech.Common.BrighterSlim/ApacheTech.Common.BrighterSlim.csproj
+++ b/src/ApacheTech.Common.BrighterSlim/ApacheTech.Common.BrighterSlim.csproj
@@ -30,6 +30,7 @@
     <NeutralLanguage>en</NeutralLanguage>
     <AssemblyOriginatorKeyFile />
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/ApacheTech-Nuget-Packages/BrighterSlim</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
